# nba-headshot-downloader

./: .gitignore  LICENSE  README.md  pyproject.toml
src/nba_headshot_downloader/: __init__.py  headshots.py
